compiler/testData/diagnostics/tests/overload/ConflictingOverloadsIdenticalValsInClass.fir.kt
class Aaa() {
    <!REDECLARATION!>val a = 1<!>
    <!REDECLARATION!>val a = 1<!>
}